# claude-hallucination-tests

./: .gitignore  README.md  conftest.py  pyproject.toml
published/: financial_suitability_comparison.md  financial_suitability_comparison_v2.md  legal_temporal_comparison_summary.md  temporal_comparison_summary.md
tests/: test_air_freight_chatbot.py  test_airline_chatbot.py  test_container_shipping_chatbot.py  test_factual_hallucinations.py  test_financial_chatbot.py  test_indirect_injection.py  test_jailbreak.py  test_legal_chatbot.py  test_logistics_chatbot.py  test_product_support_chatbot.py  test_refusal_calibration.py  test_secret_extraction.py  test_specification_gaming.py  test_sycophancy.py  test_system_prompt_leakage.py
tests/fixtures/: make_product_images.py
tools/: generate_llm_report.py
